--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -222,7 +222,7 @@
   "encrypted_note_no_permission": "Notatka jest szyfrowana i nie może być odczytana.",
   "encrypted_note_nonce": "Szyfrowana notatka Nonce",
   "enter_a_description": "Wprowadź opis",
-  "enter_pin": "Wpisz PIN",
+  "enter_pin": "Wprowadź pin",
   "error": "Błąd",
   "error_account_id": "Błedne ID konta.",
   "error_account_id_not_specified": "Id konta niepodane.",
