Fix/minimum fee (#240)
* fee selector with feeQuant, and slightly enhanced layout

* translations

* fixed tests

--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -82,7 +82,7 @@
   "avg_amount_per_block": "Durchschnittlicher Betrag pro Block",
   "avg_fee_per_block": "Durchschnittliche Gebühr pro Block",
   "balance": "Guthaben",
-  "balance_history": "Guthaben Entwicklung",
+  "balance_history": "Guthabenhistorie",
   "base_target": "Base Target",
   "bid_order_cancellation": "Kauforder stornieren",
   "bid_order_id": "Kauforder-ID",
@@ -128,10 +128,12 @@
   "change_price": "Preis ändern",
   "change_qty": "Menge ändern",
   "change_quantity": "Menge ändern",
+  "cheap_fee": "Billig",
   "checking_for_updates": "Suche nach Updates...",
   "choose_own_passphrase": "Möchten Sie Ihre eigene Passphrase wählen? Klicken Sie hier.",
   "clear_results": "Ergebnisse löschen",
   "clear_search_results": "Suchergebnisse löschen",
+  "click_here_for_help": "Klicken Sie hier, um mehr darüber zu erfahren",
   "click_here_to_enable": "Klicken Sie zum Aktivieren hier.",
   "close": "Schließen",
   "comment": "Kommentar",
@@ -220,6 +222,7 @@
   "encrypted_note_no_permission": "Der Hinweis ist verschlüsselt und kann von Ihnen nicht gelesen werden.",
   "encrypted_note_nonce": "Nonce des verschlüsselten Hinweises",
   "enter_a_description": "Geben Sie eine Beschreibung ein.",
+  "enter_pin": "PIN eingeben",
   "error": "Fehler",
   "error_account_id": "Ungültige Konto-ID.",
   "error_account_id_not_specified": "Konto-ID nicht angegeben.",
@@ -531,6 +534,7 @@
   "message_is_not_encrypted": "Diese Nachricht ist nicht verschlüsselt.",
   "messages": "Nachrichten",
   "min_nr_of_options": "Mindestanzahl an Optionen",
+  "minimum_fee": "Minimum",
   "minimum_nr_choices": "Mindestanzahl an Auswahlmöglichkeiten",
   "more_info": "Weitere Infos",
   "multi_out_payment": "Multi Out Zahlung",
@@ -651,6 +655,7 @@
   "previous_block_hash": "Hash des vorherigen Blocks",
   "previous_page": "Vorherige Seite",
   "price": "Preis",
+  "priority_fee": "Priorität",
   "private_feedback": "Privates Feedback",
   "processors": "Prozessoren",
   "product": "Artikel",
@@ -748,7 +753,7 @@
   "signature_hash": "Signaturhash",
   "signed_transaction_bytes": "Signierte Transaktionsbytes",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standard",
   "start_date": "Startdatum",
   "start_forging": "Blockgeneration starten",
   "start_forging_confirmation": "Wenn Sie Blöcke generieren möchten, klicken Sie auf die Schaltfläche unten zur Bestätigung.",
@@ -821,6 +826,7 @@
   "success_transfer_asset": "Das Asset wird übertragen.",
   "success_update_contact": "Der Kontakt wurde erfolgreich aktualisiert!",
   "success_valid_token": "Das Token ist gültig und gehört zum Konto __account_link__. Es wurde am __timestamp__ generiert.",
+  "suggested_fee": "Vorgeschlagene Gebühren",
   "tags": "Tags",
   "tags_categories": "Tags (Kategorien)",
   "tentative": "Vorläufig",
