--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Gem. bedrag per blok",
   "avg_fee_per_block": "Gemiddelde vergoeding Per blok",
   "balance": "Saldo",
+  "balance_history": "krediet geschiedenis",
   "base_target": "Basis doel",
   "bid_order_cancellation": "Bod order annulering",
   "bid_order_id": "Bid Bestelling ID",
@@ -127,10 +128,12 @@
   "change_price": "Wijzig Prijs",
   "change_qty": "Wijzig Hoeveelheid",
   "change_quantity": "Aantal wijzigen",
+  "cheap_fee": "Goedkoop",
   "checking_for_updates": "Zoeken naar updates...",
   "choose_own_passphrase": "Wilt u uw eigen wachtwoord aanmaken? Klik dan hier.",
   "clear_results": "Resultaten wissen",
   "clear_search_results": "Zoekresultaten wissen",
+  "click_here_for_help": "Klik hier om er meer over te weten",
   "click_here_to_enable": "Klik hier om het in te schakelen.",
   "close": "Sluiten",
   "comment": "Opmerking",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Het bericht is gecodeerd en kan door u niet worden gelezen.",
   "encrypted_note_nonce": "Gecodeerde Opmerking Nonce",
   "enter_a_description": "Voer een beschrijving in",
+  "enter_pin": "Voer pin in",
   "error": "Fout",
   "error_account_id": "Ongeldig account-ID.",
   "error_account_id_not_specified": "Account-ID niet opgegeven.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Dit bericht is niet versleuteld.",
   "messages": "Berichten",
   "min_nr_of_options": "Minimum aantal opties",
+  "minimum_fee": "Minimum",
   "minimum_nr_choices": "Minimum Aantal Keuzes",
   "more_info": "Meer informatie",
   "multi_out_payment": "Multi-uitbetaling",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash van vorige blok",
   "previous_page": "Vorige Pagina",
   "price": "Prijs",
+  "priority_fee": "Prioriteit",
   "private_feedback": "Prive feedback",
   "processors": "Processors",
   "product": "Product",
@@ -747,7 +753,7 @@
   "signature_hash": "Handtekening Hash",
   "signed_transaction_bytes": "Ondertekende transactie Bytes",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standaard",
   "start_date": "Begindatum",
   "start_forging": "Start Forging",
   "start_forging_confirmation": "Als u wilt beginnen met smeden, klik op de knop hieronder om dit te bevestigen.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "De overdracht van het activa is momenteel in uitvoering!",
   "success_update_contact": "De contactpersoon is bijgewerkt!",
   "success_valid_token": "Het token is geldig en behoort tot de account __account_link__. Het werd geproduceerd op __timestamp__.",
+  "suggested_fee": "Voorgestelde kosten",
   "tags": "Tags",
   "tags_categories": "Tags (categorieën)",
   "tentative": "Voorlopig",
