feat(nav): scaffold app navigation

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -76,6 +76,17 @@
     "screens": {
       "loading": {
         "loadingText": "Loading..."
+      },
+      "home": {
+        "title": "BURST",
+        "recentTransactions": "Recent Transactions",
+        "accountsList": "Accounts List"
+      },
+      "send": {
+        "title": "Send"
+      },
+      "receive": {
+        "title": "Receive"
       }
     }
   },
