--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -906,5 +906,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Sie bieten diesen Alias zum Kauf an.",
   "your_name": "Ihr Name",
-  "your_passphrase": "Ihre Passphrase"
+  "your_passphrase": "Ihre Passphrase",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
