--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -905,5 +905,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Προσφέρετε προς πώληση αυτό το ψευδώνυμο.",
   "your_name": "Το όνομά σου",
-  "your_passphrase": "Η φράση πρόσβασης σας"
+  "your_passphrase": "Η φράση πρόσβασης σας",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
