--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -905,5 +905,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Stai per mettere in vendita questo alias.",
   "your_name": "Il tuo nome",
-  "your_passphrase": "La tua Passphrase"
+  "your_passphrase": "La tua Passphrase",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
