--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -905,5 +905,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Jūs siūlote ši pseudonimą pardavimui.",
   "your_name": "Jūsų vardas",
-  "your_passphrase": "Jūsų slaptažodis"
+  "your_passphrase": "Jūsų slaptažodis",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
