--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -905,5 +905,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "あなたはこのエイリアスを売りに出しています。",
   "your_name": "名前",
-  "your_passphrase": "あなたのパスフレーズ"
+  "your_passphrase": "あなたのパスフレーズ",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
