feat(dashboard): add welcome notification

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Voleu triar la vostra contrasenya? Feu clic aquí.",
   "clear_results": "Netejar Resultats",
   "clear_search_results": "Netejar Resultats de Cerca",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Feu clic aquí per habilitar-lo.",
   "close": "Tancar",
   "comment": "Comentari",
@@ -892,7 +893,7 @@
   "warning": "Avís",
   "website": "Pàgina Web",
   "website_or_text": "Pàgina Web o Text",
-  "welcome_to_burst": "Benvinguts a burst",
+  "welcome_to_burst": "Benvinguts a burst!",
   "with_burst": "Amb burst",
   "x_confirmations": "__x__ confirmacions",
   "yes": "Si",
