--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -132,6 +132,7 @@
   "choose_own_passphrase": "Möchten Sie Ihre eigene Passphrase wählen? Klicken Sie hier.",
   "clear_results": "Ergebnisse löschen",
   "clear_search_results": "Suchergebnisse löschen",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Klicken Sie zum Aktivieren hier.",
   "close": "Schließen",
   "comment": "Kommentar",
@@ -893,7 +894,7 @@
   "warning": "Warnung",
   "website": "Webseite",
   "website_or_text": "Webseite oder Text",
-  "welcome_to_burst": "Willkommen bei Burst",
+  "welcome_to_burst": "Willkommen bei Burst!",
   "with_burst": "Mit BURST",
   "x_confirmations": "__x__ Bestätigungen",
   "yes": "Ja",
