--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Θέλετε να επιλέξετε τη δική σας φράση πρόσβασης; Κάντε κλικ εδώ.",
   "clear_results": "Διαγραφή αποτελέσματων",
   "clear_search_results": "διαγραφή αποτελεσμάτων αναζήτησης",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Κάντε κλικ εδώ για να το ενεργοποιήσετε.",
   "close": "Κλείσιμο",
   "comment": "Σχόλιο",
@@ -892,7 +893,7 @@
   "warning": "προειδοποίηση",
   "website": "Ιστοσελίδα",
   "website_or_text": "Website or Text",
-  "welcome_to_burst": "Καλώς ήλθατε στο burst",
+  "welcome_to_burst": "Καλώς ήλθατε στο burst!",
   "with_burst": "Με burst",
   "x_confirmations": "__x__ επιβεβαιώσεις",
   "yes": "Ναι",
