--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -81,6 +81,7 @@
   "available_for_transfer": "__qty__ disponible para transferir",
   "avg_amount_per_block": "Cantidad Media por Bloque",
   "avg_fee_per_block": "Tarifa Media por Bloque",
+  "balance_history": "Balance History",
   "balance": "Saldo",
   "base_target": "Objetivo Base",
   "bid_order_cancellation": "Cancelar Orden de Compra",
@@ -131,6 +132,7 @@
   "choose_own_passphrase": "¿Prefiere elegir su propia contraseña? Haga clic aquí.",
   "clear_results": "Limpiar Resultados",
   "clear_search_results": "Limpiar Resultados de Búsqueda",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Haga clic aquí para activarlo.",
   "close": "Cerrar",
   "comment": "Comentario",
@@ -892,7 +894,7 @@
   "warning": "Aviso",
   "website": "Página Web",
   "website_or_text": "Sitio web o Texto",
-  "welcome_to_burst": "Bienvenido a Burst",
+  "welcome_to_burst": "¡Bienvenido a Burst!",
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
