--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Želite odabrati vlastitu lozinku? Kliknite ovdje.",
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obriši rezultate pretraživanja",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Kliknite ovdje za omogućavanje.",
   "close": "Zatvori",
   "comment": "Komentirajte",
@@ -892,7 +893,7 @@
   "warning": "Upozorenje",
   "website": "Website",
   "website_or_text": "Website ili tekst",
-  "welcome_to_burst": "Dobrodošli u Burst",
+  "welcome_to_burst": "Dobrodošli u Burst!",
   "with_burst": "Sa BURST",
   "x_confirmations": "__x__ potvrda",
   "yes": "Da",
