--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Norite pasirinkti savo slaptažodį? Spauskite čia.",
   "clear_results": "Išvalyti rezultatus",
   "clear_search_results": "Išvalyti paieškos rezultatus",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Spauskite čia tam, kad įgalinti.",
   "close": "Uždaryti",
   "comment": "Komentaras",
@@ -892,7 +893,7 @@
   "warning": "Įspėjimas",
   "website": "Tinklalapis",
   "website_or_text": "Svetainė arba tekstas",
-  "welcome_to_burst": "Sveiki atvykę į Burst",
+  "welcome_to_burst": "Sveiki atvykę į Burst!",
   "with_burst": "Su BURST",
   "x_confirmations": "__x__ patvirtinimai",
   "yes": "Taip",
