--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Chcesz wprowadzić swoje hasło? Naciśnij tutaj.",
   "clear_results": "Wyczyść wyniki",
   "clear_search_results": "Wyczyść wyniki wyszukiwania",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Kliknij tutaj, aby włączyć.",
   "close": "Zamknij",
   "comment": "Komentarz",
@@ -902,7 +903,7 @@
   "warning": "Ostrzeżenie",
   "website": "Strona",
   "website_or_text": "Strona lub tekst",
-  "welcome_to_burst": "Witaj na Burst",
+  "welcome_to_burst": "Witaj na Burst!",
   "with_burst": "Z BURST",
   "x_confirmations": "__x__ potwierdzeń",
   "yes": "Tak",
