--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Dorești să alegi propria parolă? Fă clic aici.",
   "clear_results": "Șterge rezultate",
   "clear_search_results": "Șterge Rezultate Căutare",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Click aici pentru activare.",
   "close": "Închidere",
   "comment": "Comentariu",
@@ -892,7 +893,7 @@
   "warning": "Atenţie",
   "website": "Pagină Web",
   "website_or_text": "Pagină Web sau text",
-  "welcome_to_burst": "Bine ai venit la burst",
+  "welcome_to_burst": "Bine ai venit la burst!",
   "with_burst": "Cu burst",
   "x_confirmations": "__x__ confirmări",
   "yes": "Da",
