--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Хотите выбрать свой собственный пароль? Нажмите здесь.",
   "clear_results": "Очистить результаты",
   "clear_search_results": "Очистить результаты поиска",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Нажмите здесь, чтобы включить.",
   "close": "Закрыть",
   "comment": "Комментарий",
@@ -892,7 +893,7 @@
   "warning": "Внимание",
   "website": "Вебсайт",
   "website_or_text": "Веб-сайт или текст",
-  "welcome_to_burst": "Добро пожаловать в Burst",
+  "welcome_to_burst": "Добро пожаловать в Burst!",
   "with_burst": "С BURST",
   "x_confirmations": "__x__ подтверждений",
   "yes": "Да",
