--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -887,7 +887,7 @@
     "warning": "Upozorenje",
     "website": "Vebsajt",
     "website_or_text": "Web sajt ili Tekst",
-    "welcome_to_burst": "Dobrodošli u Burst",
+    "welcome_to_burst": "Dobrodošli u Burst!",
     "with_burst": "Sa BURST-om",
     "x_confirmations": "__x__ konfirmacija",
     "yes": "Da",
