--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Kendi şifrenizi oluşturmak için tıklayın.",
   "clear_results": "Sonuçları sil",
   "clear_search_results": "Arama sonuçlarını sil",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Etkinleştirmek için tıklatın.",
   "close": "Kapat",
   "comment": "Yorum",
@@ -892,7 +893,7 @@
   "warning": "UYARI",
   "website": "Web sitesi",
   "website_or_text": "Web sitesi veya metin",
-  "welcome_to_burst": "burst hoş geldiniz",
+  "welcome_to_burst": "burst hoş geldiniz!",
   "with_burst": "burst ile",
   "x_confirmations": "__x__ teyitleri",
   "yes": "Evet",
