--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Искате ли да изберете своя собствена парола-фраза? Щракнете тук.",
   "clear_results": "Изчисти резултатите",
   "clear_search_results": "Изчисти резултата от търсенето",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Натиснете тук за разрешаване.",
   "close": "Затвори",
   "comment": "Коментар",
@@ -892,7 +893,7 @@
   "warning": "Предупреждение",
   "website": "Уебсайт",
   "website_or_text": "Уебсайт или текст",
-  "welcome_to_burst": "Welcome to Burst",
+  "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
