--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Chcete si vybrat vlastní heslo? Klikněte sem.",
   "clear_results": "Smazat výsledky",
   "clear_search_results": "Vymazat Výsledky Hledání",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Klikněte na tlačítko povolit obsah.",
   "close": "Zavřít",
   "comment": "Komentář",
@@ -892,7 +893,7 @@
   "warning": "Varování",
   "website": "Webová stránka",
   "website_or_text": "Webová stránka nebo text",
-  "welcome_to_burst": "Vítejte v burst",
+  "welcome_to_burst": "Vítejte v burst!",
   "with_burst": "S burst",
   "x_confirmations": "__x__ confirmations",
   "yes": "Ano",
