--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Want to choose your own passphrase? Click here.",
   "clear_results": "Clear Results",
   "clear_search_results": "Clear Search Results",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Click here to enable it.",
   "click_to_apply": "Click to apply",
   "click_to_refresh": "Click to refresh",
@@ -909,7 +910,7 @@
   "warning": "Warning",
   "website": "Website",
   "website_or_text": "Website or Text",
-  "welcome_to_burst": "Welcome to Burst",
+  "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
