--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Untuk memilih password Anda sendiri? Klik di sini.",
   "clear_results": "Hapus hasil",
   "clear_search_results": "Menghapus Hasil Pencarian",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Klik di sini untuk mengaktifkannya.",
   "close": "Tutup",
   "comment": "Komentar",
@@ -892,7 +893,7 @@
   "warning": "Peringatan",
   "website": "Situs web",
   "website_or_text": "Situs web atau teks",
-  "welcome_to_burst": "Selamat datang di Burst",
+  "welcome_to_burst": "Selamat datang di Burst!",
   "with_burst": "Dengan BURST",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
