--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Vuoi scegliere la propria passphrase? Clicca qui.",
   "clear_results": "Clear Results",
   "clear_search_results": "Rimuovi risultati di ricerca",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Clicca qui per attivarlo.",
   "close": "Chiudi",
   "comment": "Commento",
@@ -892,7 +893,7 @@
   "warning": "Avviso",
   "website": "Sito Web",
   "website_or_text": "Sito Web o testo",
-  "welcome_to_burst": "Benvenuti a Burst",
+  "welcome_to_burst": "Benvenuti a Burst!",
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ conferme",
   "yes": "Sì",
