--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Wilt u uw eigen wachtwoord aanmaken? Klik dan hier.",
   "clear_results": "Resultaten wissen",
   "clear_search_results": "Zoekresultaten wissen",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Klik hier om het in te schakelen.",
   "close": "Sluiten",
   "comment": "Opmerking",
@@ -892,7 +893,7 @@
   "warning": "Waarschuwing",
   "website": "Website",
   "website_or_text": "Website of Tekst",
-  "welcome_to_burst": "Welkom bij Burst",
+  "welcome_to_burst": "Welkom bij Burst!",
   "with_burst": "Met BURST",
   "x_confirmations": "__x__ bevestigingen",
   "yes": "Ja",
