--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Quer escolher sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar os Resultados da Pesquisa",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
   "close": "Fechar",
   "comment": "Comentar",
@@ -892,7 +893,7 @@
   "warning": "Aviso",
   "website": "Sítio da Web",
   "website_or_text": "Site ou texto",
-  "welcome_to_burst": "Bem vindo a burst",
+  "welcome_to_burst": "Bem vindo a burst!",
   "with_burst": "Com burst",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
