--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -131,6 +131,7 @@
   "choose_own_passphrase": "Желите одабрати властиту лозинку? Кликните овде.",
   "clear_results": "Обриши Резултате",
   "clear_search_results": "Обришите Резултате Претраге",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_to_enable": "Кликните овде да га омогућите.",
   "close": "Затвори",
   "comment": "Коментариши",
@@ -892,7 +893,7 @@
   "warning": "Упозорење",
   "website": "Вебсајт",
   "website_or_text": "Wеб сајт или Текст",
-  "welcome_to_burst": "Добродошли у BURST",
+  "welcome_to_burst": "Добродошли у BURST!",
   "with_burst": "Са BURST-ом",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
